src/test/ui/type-alias-impl-trait/generic_duplicate_lifetime_param.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/generic_duplicate_lifetime_param.rs:8:26
   |
LL | fn one<'a>(t: &'a ()) -> Two<'a, 'a> {
   |                          ^^^^^^^^^^^
   |
note: lifetime used multiple times
  --> $DIR/generic_duplicate_lifetime_param.rs:5:10
   |
LL | type Two<'a, 'b> = impl std::fmt::Debug;
   |          ^^  ^^

error: could not find defining uses
  --> $DIR/generic_duplicate_lifetime_param.rs:5:20
   |
LL | type Two<'a, 'b> = impl std::fmt::Debug;
   |                    ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

